Bug 398469 - Bad font rendering when display scaling factor is 1.2
Summary: Bad font rendering when display scaling factor is 1.2
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_plymouth (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-10 22:11 UTC by Patrick Silva
Modified: 2019-08-01 15:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments
screenshot (54.50 KB, image/png)
2018-09-10 22:11 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-09-10 22:11:48 UTC
Created attachment 114888 [details]
screenshot

Set display scaling factor to 1.2 in system settings > display and monitor.
Restart plasma session and open plymouth kcm.
My screenshot taken on neon dev unstable shows the result.
Comment 1 Thomas Piekarski 2018-09-11 06:18:52 UTC
Hello,

the bug is reproducible, but wondering because such scaling issues should have been resolved upstream in the Qt library itself, please see:

https://bugs.kde.org/show_bug.cgi?id=391694
https://bugreports.qt.io/browse/QTBUG-67007

Checked also to set the scaling to the next integer, 2 to see if it matched the bug before. It does, there is no trouble as soon as the scaling is an integer. But when it's a fraction the rendering is broken. But due to that additional the layout breaks I think it is not a duplicate, I'll link the issue 391694. Or what do you think, is this a duplicate?
Comment 2 Patrick Silva 2018-09-11 11:22:07 UTC
maybe it's related to another Qt bug reported by Kai some hours ago
https://bugreports.qt.io/browse/QTBUG-70481
Comment 3 Nate Graham 2018-09-12 00:10:27 UTC
Here's the deal:
The first attempt at fixing this upstream (https://bugreports.qt.io/browse/QTBUG-67007) failed and made the problem worse. We now have two options:
- Fix it upstream correctly (tracked by https://bugreports.qt.io/browse/QTBUG-70481)
- Work around it in KDE-land by using QtRendering instead of NativeRendering. This happens automatically for UIs that use QQC2 due to our theming. I suspect the issue is QQC1 controls here.
Comment 4 Björn Feber 2019-08-01 14:51:32 UTC
Git commit 894f6706afeff7fff73ad0afe4cbf90dfe9b0387 by Björn Feber.
Committed on 01/08/2019 at 14:51.
Pushed by bfeber into branch 'master'.

Improve the look of the Plymouth Boot Splash Screen KCM UI

Summary:
Related: bug 408573

Port the KCM to the new GriedView KCM design.
{F6771665}
Credits go to @broulik, he basically did all the work.

Test Plan: Open the Plymouth Boot Splash Screen KCM.

Reviewers: #plasma, #vdg, ngraham, broulik

Reviewed By: #plasma, #vdg, ngraham, broulik

Subscribers: davidedmundson, abetts, ngraham, broulik, #vdg, plasma-devel, #plasma

Tags: #plasma

Maniphest Tasks: T7270

Differential Revision: https://phabricator.kde.org/D20549

M  +0    -3    src/helper.cpp
M  +99   -53   src/kcm.cpp
M  +19   -4    src/kcm.h
M  +3    -3    src/kcm_plymouth.desktop
M  +63   -150  src/package/contents/ui/main.qml

https://commits.kde.org/plymouth-kcm/894f6706afeff7fff73ad0afe4cbf90dfe9b0387