Improve the look of the Plymouth Boot Splash Screen KCM UI

Summary:
BUG: 398469
BUG: 408573

Port the KCM to the new GriedView KCM design.
{F6771665}
Credits go to @broulik, he basically did all the work.

Test Plan: Open the Plymouth Boot Splash Screen KCM.

Reviewers: #plasma, #vdg, ngraham, broulik

Reviewed By: #plasma, #vdg, ngraham, broulik

Subscribers: davidedmundson, abetts, ngraham, broulik, #vdg, plasma-devel, #plasma

Tags: #plasma

Maniphest Tasks: T7270

Differential Revision: https://phabricator.kde.org/D20549